--- a/main.css
+++ b/main.css
@@ -8,9 +8,12 @@ body {
   display: -ms-flexbox;
   display: flex;
   height: 100vh;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -19,8 +22,8 @@ body {
 .grid-container {
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: (180px)[4];
-      grid-template-rows: repeat(4, 180px);
+  -ms-grid-rows: (15vmin)[4];
+      grid-template-rows: repeat(4, 15vmin);
   -ms-grid-columns: auto;
       grid-template-columns: auto;
   grid-row-gap: 20px;
@@ -35,8 +38,8 @@ body {
 .grid-container .grid-row {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (180px)[4];
-      grid-template-columns: repeat(4, 180px);
+  -ms-grid-columns: (15vmin)[4];
+      grid-template-columns: repeat(4, 15vmin);
   grid-column-gap: 20px;
 }
 
@@ -53,8 +56,8 @@ body {
 
 .grid-container .tiles .tile {
   position: absolute;
-  width: 180px;
-  height: 180px;
+  width: 15vmin;
+  height: 15vmin;
   border-radius: 10px;
   background: #eee4da;
   display: -webkit-box;
@@ -66,11 +69,24 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-transition: -webkit-transform 0.1s linear;
+  transition: -webkit-transform 0.1s linear;
+  transition: transform 0.1s linear;
+  transition: transform 0.1s linear, -webkit-transform 0.1s linear;
+  z-index: 2;
 }
 
 .grid-container .tiles .tile .tile-number {
-  font-size: 150px;
   font-weight: bold;
   font-family: 'Operator Mono', sans-serif;
   color: #776e65;
 }
+
+.js-new {
+  color: white;
+  background: orange;
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 8px;
+}
+/*# sourceMappingURL=main.css.map */
