--- a/main.sass
+++ b/main.sass
@@ -5,12 +5,13 @@ body
     padding: 0
     display: flex
     height: 100vh
-    justify-content: center
+    flex-direction: column
+    justify-content: space-around
     align-items: center
 
 .grid-container
     display: grid
-    grid-template-rows: repeat(4, 180px)
+    grid-template-rows: repeat(4, 15vmin)
     grid-template-columns: auto
     grid-row-gap: 20px
     border-radius: 15px
@@ -20,7 +21,7 @@ body
     position: relative
     .grid-row
         display: grid
-        grid-template-columns: repeat(4, 180px)
+        grid-template-columns: repeat(4, 15vmin)
         grid-column-gap: 20px
         .grid-cell
             background: rgba(238, 228, 218, 0.35)
@@ -31,15 +32,22 @@ body
         height: 100%
         .tile
             position: absolute
-            width: 180px
-            height: 180px
+            width: 15vmin
+            height: 15vmin
             border-radius: 10px
             background: rgb(238, 228, 218)
             display: flex
             justify-content: center
             align-items: center
+            transition: transform 0.1s linear
+            z-index: 2
             .tile-number
-                font-size: 150px
                 font-weight: bold
                 font-family: 'Operator Mono', sans-serif
                 color: #776e65
+.js-new
+    color: white
+    background: orange
+    padding: 10px 20px
+    cursor: pointer
+    border-radius: 8px
